syntax = "proto3";
package blog.blog;

import "gogoproto/gogo.proto";
import "blog/blog/params.proto";
import "blog/blog/post_count.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "blog/x/blog/types";

// GenesisState defines the blog module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  PostCount postCount = 2;
  // this line is used by starport scaffolding # genesis/proto/state
}
